Fix X overflow issue on smaller viewports

--- a/react/editbar.global.css
+++ b/react/editbar.global.css
@@ -202,6 +202,7 @@
   height: 640px;
   max-height: 100%;
   box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .tablet-preview {
@@ -209,6 +210,7 @@
   height: 1024px;
   max-height: 100%;
   box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .stroke-blue {
